--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
 							<center>
 								<p class="player-info" id="player-name-p"></p>
 								<p class="player-info" id="points"></p>
-								<table>
-									<tbody>
-										<tr><h1>Highscore</h1><img id="loader-gif" style="display:none" src="style/ajax-loader.gif"></img></tr>
-										<div id="highscore-row">
-										</div>
-									</tbody>
+								<h1>Highscore</h1><img id="loader-gif" style="display:none" src="style/ajax-loader.gif"></img>
+								<table id="highscore-row">
 								</table>
 								<button class="btn overout" id="restart-btn" style="visibility:hidden;position:relative;top:40px;" onclick="restart()">Restart</button>
 							</center>
