--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 				</tr>
 				</tbody>
 			</table>
+			<button id="need-help-btn" class="btn" onclick="show_key_help_buttons()">No keys?</button>
+			<div id="aid-btns" style="display:none;border: 1px solid blue; border-radius: 20px; width:200px">
+				<button onclick="up()">UP</button>
+				<br>
+				<button onclick="left()">LEFT</button><button onclick="right()">RIGHT</button>
+				<br>
+				<button onclick="down()">DOWN</button>
+			</div>
 		</center>
 	</div>
 </body>
@@ -147,6 +155,11 @@ function get_highscore(){
 
 }
 
+function show_key_help_buttons(){
+	$("#aid-btns").css("display", "inherit");
+	$("#need-help-btn").css("display", "none")
+}
+
 // the game loop!
 function go(){
 
@@ -226,6 +239,7 @@ function gameover(){
 //	alert("game over!!!!");
 	clearInterval(timerId);
 	$("#restart-btn").css("visibility", "visible");
+	$("#aid-btns").css("display", "none");
 
 	post_result();
 	get_highscore();
@@ -341,6 +355,7 @@ function addHandlers(){
 		$("#name-give-btn").css("display", "none");
 		$("#stuff-div").css("display", "inherit");
 		$("#canvas-div").css("display", "inherit");		
+		$("#need-help-btn").css("display", "inherit");
 
 		$("#player-name-p").html("Player: " + player_name);
 
@@ -349,11 +364,15 @@ function addHandlers(){
 	});
 }
 
+function to_hide(){
+	$("#need-help-btn").css("display", "none");
+}
+
 $(document).ready(function(){
 
 	addHandlers();
-
 	get_highscore();
+	to_hide();
 
 	canvas = document.getElementById("tcanvas");
 
